--- a/pom.xml
+++ b/pom.xml
@@ -56,38 +56,46 @@
   </build>
 
   <dependencies>
-    <!-- Mandatory dependencies for using Spock -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+      <version>2.1.3.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <version>2.1.3.RELEASE</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.spockframework</groupId>
       <artifactId>spock-core</artifactId>
-      <version>1.3-groovy-2.5</version>
+      <version>1.2-groovy-2.4</version>
       <scope>test</scope>
     </dependency>
-    <!-- Optional dependencies for using Spock -->
-    <dependency> <!-- use a specific Groovy version rather than the one specified by spock-core -->
-      <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy-all</artifactId>
-      <version>2.5.7</version>
-      <type>pom</type>
-    </dependency>
-    <dependency> <!-- enables mocking of classes (in addition to interfaces) -->
-      <groupId>net.bytebuddy</groupId>
-      <artifactId>byte-buddy</artifactId>
-      <version>1.9.3</version>
+
+    <dependency>
+      <groupId>org.spockframework</groupId>
+      <artifactId>spock-spring</artifactId>
+      <version>1.2-groovy-2.4</version>
       <scope>test</scope>
     </dependency>
-    <dependency> <!-- enables mocking of classes without default constructor (together with CGLIB) -->
-      <groupId>org.objenesis</groupId>
-      <artifactId>objenesis</artifactId>
-      <version>2.6</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency> <!-- only required if Hamcrest matchers are used -->
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
+
+    <!--<dependency> &lt;!&ndash; enables mocking of classes (in addition to interfaces) &ndash;&gt;-->
+      <!--<groupId>net.bytebuddy</groupId>-->
+      <!--<artifactId>byte-buddy</artifactId>-->
+      <!--<version>1.9.3</version>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
+    <!--<dependency> &lt;!&ndash; enables mocking of classes without default constructor (together with CGLIB) &ndash;&gt;-->
+      <!--<groupId>org.objenesis</groupId>-->
+      <!--<artifactId>objenesis</artifactId>-->
+      <!--<version>2.6</version>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
+
     <!-- Dependencies used by examples in this project (not required for using Spock) -->
     <dependency>
       <groupId>com.h2database</groupId>
